@@ -37,6 +37,7 @@ DIST patch-2.6.37.4.bz2 139328 RMD160 1e5ee5b5ea9cf52dc839ae49d83687024acbab9a S
 DIST patch-2.6.38.2.bz2 47827 RMD160 ea9caa39c7a94ee7aca536270dfb47e22f28ecd9 SHA1 d12aee147a1dc94ea8cc86f12155c52a6a526066 SHA256 8279d5b883cb44f4d3cf28b4db9b3c37c9c6dba45bb5884e8601950ee59892c4
 DIST patch-2.6.38.3.bz2 77144 RMD160 481a5f3286be77edafb237ec7bd8ee49fff52fe0 SHA1 c53f1e25e33be6793173f437da8f8e12af60498f SHA256 cc7fe37725d940987800c73c38484e7c8388936b332fca9918aae4dca15be10b
 DIST patch-2.6.38.4.bz2 103177 RMD160 24f922204d8ec7ecd8a53e108dc1a0c45c432ec8 SHA1 9d454b361bc9926d010bd5170ecf4ba2ec32b1fd SHA256 64abfd999ac9416db143293528f73a0b88ac287bf4d075556dc7859017d97687
+DIST patch-2.6.38.5.bz2 117587 RMD160 90400c45708f9ebda17a9d22cb23aac8e6d861bf SHA1 d68c5392ea29e7783420e208e81988484c55143c SHA256 46213fd83da87a066f4b6462c043149638bcaca423d6a932d8434e9d27c7140b
 EBUILD calculate-sources-2.6.32.27.ebuild 743 RMD160 7a7373e2089b89fa1b455beaa7ffa76df55a2a7c SHA1 68e23b452535a1428bf26f69c77f173cf5f14c8c SHA256 16c77287e57348c52c4eac9a540dc444420dd1ce5cf9e894329a0fcbaf53929a
 EBUILD calculate-sources-2.6.32.28.ebuild 756 RMD160 5de42dce259cfb0023ad8df8e33fff648c30d1d1 SHA1 05312fed930cf3126498ce6539e0babc210489ac SHA256 52e676fe69d5361125a564bfaf0be5fd4263c5242e8b54c469f0b500a52ecf33
 EBUILD calculate-sources-2.6.32.33.ebuild 749 RMD160 427a3669340a36d19516e4a5eedae61d5f741781 SHA1 42179d3e424a3a515ea43c18b9712fa3e837af7a SHA256 907aa69a4220bf860afe597717a80c694a60e7ae7ea014b7686f0cdf47c88f9b
@@ -48,5 +49,6 @@ EBUILD calculate-sources-2.6.37.4.ebuild 1363 RMD160 561f6dba1255bb37fa01773783a
 EBUILD calculate-sources-2.6.38.2.ebuild 743 RMD160 40697f7e540a667f4a9b8ac19ecd12345e1446c9 SHA1 baf81ce99dd9e0d2900cc47e98a89b83cbd1cee3 SHA256 cef0d37d8e5568162939a6ef87c9749c35dca0db14ce02f2a344fb408de7c68f
 EBUILD calculate-sources-2.6.38.3.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
 EBUILD calculate-sources-2.6.38.4.ebuild 744 RMD160 4d0334c6dd67a0a89aabb809239e79f52c4941cb SHA1 18a81f5fc9d309104dff70d96d46b5cb161c1492 SHA256 e997164cc8fcf5fd474c39cf35e518dea55878e4131a4037248aaf79cae9d3c7
-MISC ChangeLog 5984 RMD160 eddbee10fe749464a9f9b964580ecbb6a84aaaa2 SHA1 adbace907f5f09e3ee6f4353fce4f2f040ef7f4c SHA256 0a175cd8254f1aec1bb7f0168b00678faffcef2fbfd7780ddc27c88aebe0acbe
+EBUILD calculate-sources-2.6.38.5.ebuild 746 RMD160 67ca1ff5ab4d3d593ab50efaea3ce4e632cf62f4 SHA1 e84d2ba547440e5546bdbc51fedf310cc68dd8c2 SHA256 eb949421bdbe497318fa3b460591c20dcc76fde4f716da9d794c0e7bf1df126b
+MISC ChangeLog 6146 RMD160 d09215447adafe55fd3b0e24e881b3e820a4b876 SHA1 19ee306c5b32fb3d48b1cef318e4d1f0d08b701d SHA256 c907324ca1d988fd7558f97c148f492223a00637db65aaf168ec014f64f143cd
 MISC metadata.xml 523 RMD160 855108e020b3f1fe32f843accc94a57f15affa0e SHA1 7fbeb862ff719c9ef63925b7f18104ff6eac27dd SHA256 997dc6d02e44eef86cc9653d7588b9f65e9033f02e28b3a8d98f48df82561f3c
