@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.38.5 (03 May 2011)
+
+  03 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.38.5.ebuild:
+  Bump version
+
 *calculate-sources-2.6.38.4 (25 Apr 2011)
 
   25 Apr 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
